fixed StashBuilder. Parallelized stash generation